# Android-x86-installer

./: .gitignore  LICENSE  README.md  index.html  lit-localize.json  package.json  pnpm-lock.yaml  vite.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-preview.yml  rust.yml  tauri.yml
src/: installer_app.js  installer_app_main.js  main.js  qemu_config.js  side_navigation_panel.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.graphite  icon.icns
src-tauri/src/: cli.rs  error.rs  fs_utils.rs  main.rs  progress.rs  qemu_install.rs  uninstall.rs  windows.rs  windows_install_bootloader.rs  windows_uninstall.rs
src/css/: theme.css  theme.dark.css  theme.light.css  tokens.css
xliff/: ar.xlf
